# schrodinger-plugin-faces

./: Cargo.toml  plugin.json
.github/workflows/: release.yml
src/: lib.rs
